[metadata]
name = bbhbot
version = 0.0.3
author = Erik Gustafsson (Team Alive) and Hive Pizza Team
author_email = erikegse@gmail.com
description = A script to find and react to BBH commands in comments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flaxz/bbhbot
project_urls =
    Bug Tracker = https://github.com/flaxz/bbhbot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src